# fluxa-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
docs/: frontend-contract.md
migrations/: 202603260001_init.sql
proto/: internal.proto
scripts/: generate_openapi.sh  smoke_test.sh
src/: auth.rs  cache.rs  config.rs  db.rs  domain.rs  error.rs  grpc.rs  http.rs  jobs.rs  lib.rs  main.rs  openapi.rs  pagination.rs  state.rs
src/db/: jobs.rs  memberships.rs  mod.rs  refresh_tokens.rs  tasks.rs  users.rs
src/domain/: auth.rs  jobs.rs  mod.rs  tasks.rs
src/grpc/: mapping.rs  parsing.rs  server.rs
src/grpc/services/: job_admin.rs  mod.rs  task_read.rs
src/http/: dto.rs  handlers.rs  helpers.rs  middleware.rs
src/jobs/: dispatch.rs  processor.rs  runner.rs  scheduler.rs
src/services/: auth.rs  jobs.rs  mod.rs  tasks.rs
tests/: stack_contracts.rs
tests/support/: mod.rs
