[package]
name = "fluxa-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7", features = ["http2", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
http = "1.3"
jsonwebtoken = "9.3"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
once_cell = "1.21"
prost = "0.13"
prost-types = "0.13"
redis = { version = "0.25", features = ["aio", "connection-manager", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["compression-full", "cors", "request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.17", features = ["serde", "v4"] }

[build-dependencies]
protoc-bin-vendored = "3.1"
tonic-build = "0.12"
